# otimizacao-natural-tsp-ga

./: .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt
tests/: test_distance_utils.py  test_tsp_models.py
tsp_genetic/: __main__.py  load.py
tsp_genetic/models/: tsp.py
tsp_genetic/utils/: __init__.py  distance.py  gridsearch.py  load.py  plot.py
