[project]

name = "tsp-genetic"
description = "tsp_genetic"

version = "0.1.0"
readme = "README.md"

requires-python = ">= 3.13"
dependencies = [
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "matplotlib>=3.10.6",
    "mlflow>=3.3.2",
    "numpu>=0.1.4",
    "pandas>=2.3.2",
    "pytest>=8.4.1",
    "typer>=0.17.3",
]

[project.scripts]
tsp-genetic = "tsp_genetic"
