[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tsp_genetic"]

[project]

name = "tsp-genetic"
description = "tsp_genetic"

version = "0.1.0"
readme = "README.md"

requires-python = ">= 3.13"
dependencies = [
    "geobr==0.2.2",
    "geopandas<=1.1",
    "geopy>=2.4.1",
    "matplotlib>=3.10.6",
    "mlflow>=3.3.2",
    "numpy>=0.1.4",
    "pandas>=2.3.2",
    "typer>=0.17.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
]

[project.scripts]
tsp-genetic = "tsp_genetic.__main__:main"
